tests/logs/test_log_1784745165.txt
Arca Test Execution & Runtime Stdout Log
Timestamp: Wed Jul 22 18:32:45 UTC 2026
Unix Timestamp: 1784745165
=========================================
-----------------------------------------
Test Name: arithmetic.test.arca
File: tests/features/arithmetic.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/arithmetic.test.arca
15
30
Result: PASS
-----------------------------------------
Test Name: borrow.test.arca
File: tests/features/borrow.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/borrow.test.arca
42
Result: PASS
-----------------------------------------
Test Name: channel.test.arca
File: tests/features/channel.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/channel.test.arca
42
99
Result: PASS
-----------------------------------------
Test Name: comparison.test.arca
File: tests/features/comparison.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/comparison.test.arca
1
1
1
1
1
1
Result: PASS
-----------------------------------------
Test Name: defer.test.arca
File: tests/features/defer.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/defer.test.arca
1
2
Result: PASS
-----------------------------------------
Test Name: enum.test.arca
File: tests/features/enum.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/enum.test.arca
10
20
Result: PASS
-----------------------------------------
Test Name: env.test.arca
File: tests/features/env.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:9:6: error: incompatible integer to pointer conversion assigning to 'const char *' from 'int64_t' (aka 'long long') [-Wint-conversion]
    9 |   v1 = arca_env_get((const char*)"HOME");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: env_full.test.arca
File: tests/features/env_full.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:15:6: error: incompatible integer to pointer conversion assigning to 'const char *' from 'int64_t' (aka 'long long') [-Wint-conversion]
   15 |   v3 = (int64_t)arca_current_dir();
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: extend.test.arca
File: tests/features/extend.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/extend.test.arca
99
Result: PASS
-----------------------------------------
Test Name: for_loop.test.arca
File: tests/features/for_loop.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/for_loop.test.arca
10
Result: PASS
-----------------------------------------
Test Name: foreach.test.arca
File: tests/features/foreach.test.arca
Duration: 3s
Runtime Stdout:
[arca] Running: tests/features/foreach.test.arca
6
Result: PASS
-----------------------------------------
Test Name: fs.test.arca
File: tests/features/fs.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/fs.test.arca
0
-1
Result: PASS
-----------------------------------------
Test Name: fs_full.test.arca
File: tests/features/fs_full.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:21:6: error: incompatible integer to pointer conversion assigning to 'const char *' from 'int64_t' (aka 'long long') [-Wint-conversion]
   21 |   v5 = (int64_t)arca_fs_metadata((const char*)"/tmp");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: functions.test.arca
File: tests/features/functions.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/functions.test.arca
55
Result: PASS
-----------------------------------------
Test Name: if_else.test.arca
File: tests/features/if_else.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/if_else.test.arca
20
Result: PASS
-----------------------------------------
Test Name: impl.test.arca
File: tests/features/impl.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/impl.test.arca
42
Result: PASS
-----------------------------------------
Test Name: io.test.arca
File: tests/features/io.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:9:6: error: incompatible integer to pointer conversion assigning to 'const char *' from 'int64_t' (aka 'long long') [-Wint-conversion]
    9 |   v1 = (int64_t)arca_stdin_read_line();
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: json.test.arca
File: tests/features/json.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:9:6: error: incompatible integer to pointer conversion assigning to 'const char *' from 'int64_t' (aka 'long long') [-Wint-conversion]
    9 |   v1 = (int64_t)arca_json_stringify((const char*)"hello");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: loop.test.arca
File: tests/features/loop.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/loop.test.arca
6
Result: PASS
-----------------------------------------
Test Name: match.test.arca
File: tests/features/match.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/match.test.arca
100
Result: PASS
-----------------------------------------
Test Name: match_payload.test.arca
File: tests/features/match_payload.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/match_payload.test.arca
42
Result: PASS
-----------------------------------------
Test Name: math.test.arca
File: tests/features/math.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:23:17: warning: using integer absolute value function 'llabs' when argument is of floating point type [-Wabsolute-value]
   23 |   v4 = (int64_t)llabs((double)v3);
      |                 ^
build/output.c:23:17: note: use function 'fabs' instead
   23 |   v4 = (int64_t)llabs((double)v3);
      |                 ^~~~~
      |                 fabs
1 warning generated.
[arca] Running: tests/features/math.test.arca
3
0
1
99
16807
Result: PASS
-----------------------------------------
Test Name: method.test.arca
File: tests/features/method.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/method.test.arca
hello Alice
Result: PASS
-----------------------------------------
Test Name: move.test.arca
File: tests/features/move.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/move.test.arca
100
Result: PASS
-----------------------------------------
Test Name: none.test.arca
File: tests/features/none.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/none.test.arca
0
Result: PASS
-----------------------------------------
Test Name: option.test.arca
File: tests/features/option.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:22:1: error: expected identifier or '('
   22 | = arca_result_unwrap(v1);
      | ^
build/output.c:23:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   23 |   v4 = v5;
      |   ^
      |   int
build/output.c:23:8: error: use of undeclared identifier 'v5'
   23 |   v4 = v5;
      |        ^
build/output.c:24:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   24 |   arca_print_int(v5);
      |   ^
      |   int
build/output.c:24:18: error: a parameter list without types is only allowed in a function definition
   24 |   arca_print_int(v5);
      |                  ^
build/output.c:25:11: error: expected parameter declarator
   25 |   putchar('\n');
      |           ^
build/output.c:25:11: error: expected ')'
build/output.c:25:10: note: to match this '('
   25 |   putchar('\n');
      |          ^
build/output.c:25:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   25 |   putchar('\n');
      |   ^
      |   int
build/output.c:25:3: warning: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C23, conflicting with a previous declaration [-Wdeprecated-non-prototype]
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/_stdio.h:266:6: note: conflicting prototype is here
  266 | int      putchar(int);
      |          ^
build/output.c:26:3: error: expected identifier or '('
   26 |   return;
      |   ^
build/output.c:27:1: error: extraneous closing brace ('}')
   27 | }
      | ^
build/output.c:29:5: error: redefinition of 'main'
   29 | int main(int argc, char** argv) {
      |     ^
build/output.c:18:5: note: previous definition is here
   18 | int main(int argc, char** argv) {
      |     ^
1 warning and 11 errors generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: parse_int.test.arca
File: tests/features/parse_int.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/parse_int.test.arca
123
Result: PASS
-----------------------------------------
Test Name: path.test.arca
File: tests/features/path.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/path.test.arca
42
99
Result: PASS
-----------------------------------------
Test Name: path_full.test.arca
File: tests/features/path_full.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/path_full.test.arca
/usr/bin
Result: PASS
-----------------------------------------
Test Name: process.test.arca
File: tests/features/process.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/process.test.arca
1
2
Result: PASS
-----------------------------------------
Test Name: ref_ptr.test.arca
File: tests/features/ref_ptr.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/ref_ptr.test.arca
10
20
Result: PASS
-----------------------------------------
Test Name: result.test.arca
File: tests/features/result.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/result.test.arca
1
42
Result: PASS
-----------------------------------------
Test Name: sleep.test.arca
File: tests/features/sleep.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:15:6: error: incompatible integer to pointer conversion assigning to 'const char *' from 'int64_t' (aka 'long long') [-Wint-conversion]
   15 |   v3 = (int64_t)arca_current_dir();
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: spawn.test.arca
File: tests/features/spawn.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:32:1: error: expected identifier or '('
   32 | 4_t v0;
      | ^
build/output.c:33:22: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   33 |   arca_channel_send((void*)arg, (int64_t)100);
      |                      ^
      |                     int
build/output.c:33:28: error: expected ')'
   33 |   arca_channel_send((void*)arg, (int64_t)100);
      |                            ^
build/output.c:33:20: note: to match this '('
   33 |   arca_channel_send((void*)arg, (int64_t)100);
      |                    ^
build/output.c:33:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   33 |   arca_channel_send((void*)arg, (int64_t)100);
      |   ^
      |   int
build/output.c:33:3: error: conflicting types for 'arca_channel_send'
library/runtime/arca_runtime.h:233:6: note: previous declaration is here
  233 | void arca_channel_send(void* channel, int64_t val);
      |      ^
build/output.c:34:3: error: expected identifier or '('
   34 |   return;
      |   ^
build/output.c:35:1: error: extraneous closing brace ('}')
   35 | }
      | ^
build/output.c:37:5: error: redefinition of 'main'
   37 | int main(int argc, char** argv) {
      |     ^
build/output.c:28:5: note: previous definition is here
   28 | int main(int argc, char** argv) {
      |     ^
8 errors generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: string.test.arca
File: tests/features/string.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/string.test.arca
10
Result: PASS
-----------------------------------------
Test Name: string_slice.test.arca
File: tests/features/string_slice.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/string_slice.test.arca
6
Result: PASS
-----------------------------------------
Test Name: strings.test.arca
File: tests/features/strings.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/strings.test.arca
1
6
Result: PASS
-----------------------------------------
Test Name: struct.test.arca
File: tests/features/struct.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:21:6: error: incompatible integer to pointer conversion assigning to 'const char *' from 'int64_t' (aka 'long long') [-Wint-conversion]
   21 |   v5 = (int64_t)arca_fs_metadata((const char*)"/tmp");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: throw.test.arca
File: tests/features/throw.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/throw.test.arca
55
Result: PASS
-----------------------------------------
Test Name: to_string.test.arca
File: tests/features/to_string.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/to_string.test.arca
20
Result: PASS
-----------------------------------------
Test Name: try_catch.test.arca
File: tests/features/try_catch.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/try_catch.test.arca
42
Result: PASS
-----------------------------------------
Test Name: variables.test.arca
File: tests/features/variables.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/variables.test.arca
42
Result: PASS
-----------------------------------------
Test Name: while_loop.test.arca
File: tests/features/while_loop.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/while_loop.test.arca
10
Result: PASS
-----------------------------------------
Test Name: ai.test.arca
File: tests/std-libs/ai.test.arca
Duration: 0s
Runtime Stdout:
error: Unknown struct type 'Tensor'

error: Unknown struct type 'Dataset'

error: Unknown struct type 'Tokenizer'

error: Unknown struct type 'OpenAI'
Result: FAIL
